--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>John Doe - Full Stack Developer</title>
+    <title> Neela Saikiran </title>
     
     <style>
         * {
@@ -572,11 +572,10 @@
     <!-- Hero Section -->
     <section id="home" class="hero">
         <div class="hero-content">
-            <h1>John Doe</h1>
+            <h1>Neela Saikiran</h1>
             <p class="subtitle">Full Stack Developer</p>
             <p class="description">
-                Welcome to my digital portfolio! I'm passionate about creating innovative web solutions 
-                that blend beautiful design with powerful functionality.
+                Hii Mowa Bro's
             </p>
             <a href="#about" class="cta-button">Learn More About Me</a>
         </div>
