--- a/index.html
+++ b/index.html
@@ -552,7 +552,7 @@
     <!-- Header -->
     <header class="header">
         <nav class="nav container">
-            <div class="logo">JD</div>
+            <div class="logo">NS</div>
             <ul class="nav-links" id="navLinks">
                 <li><a href="#home">Home</a></li>
                 <li><a href="#about">About</a></li>
